# DE_project

./: a.yaml  package-lock.json  test_mse.pkl
ai/: .gitignore  README.md  generate.py  main.py  pyproject.toml  upload.py
backend/: .gitignore  README.md  classification.py  demo_musicgen.py  divider.py  features.py  main.py  make_audio_from_youtube.py  music_classification_model.ipynb  new_ensemble_mel.h5  pyproject.toml  requirements.txt  test.py
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/create-music/: AudioController.js  CreateMusicPage.js
frontend/src/components/find-music/: FindMusicPage.js
frontend/src/components/home/: HomePage.js
frontend/src/components/layout/: Layout.js
frontend/src/folder/: function.js  h.html  styled.js
frontend/src/lottie/: generate_loading.json
frontend/src/page/: AudioList.js  creat_music.js  loading.js  main.js
frontend/src/page/controls/: button.css  control-panel.css
frontend/src/page/slider/: Slider.js
frontend/src/store/: useMusicStore.js
